# tango

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  PLAN.md  README.md  pyproject.toml
channels/example/: BUDGET.md  CHANNEL.md  MEMORY.md  ORG.md  PERSONALITY.md  SOUL.md  tools.toml
client/: next.config.mjs  package-lock.json  package.json
client/app/: globals.css  page.js
client/components/: CanvasArea.js  PlanVisualizer.js
deploy/: RUNBOOK-COWORKER.md
deploy/litellm-proxy/: .env.example  README.md  docker-compose.yml  litellm_config.yaml  provision-workspace-key.sh  reconcile-spend.sh
docs/: ADR-0001-sqlite-vs-temporal.md  AMBIENT-RUNTIME.md  API-CONTRACTS.md  ARCHITECTURE.md  BORROWED-PATTERNS.md  CONTEXT-MEMORY.md  COWORKER-RUNTIME-STATUS.md  HERMES-MCP.md  LITELLM-PROXY.md  MULTIMODAL.md  SAAS-ROADMAP.md  SLACK-SAAS-MANIFEST.md  TASK-RUNTIME.md  THREAT-MODEL.md  TOOL-POLICY.md
examples/mcp/: hermes_bridge_server.py  org_kb_server.py
examples/org/: SOUL.md
scripts/: import-hermes-skills.sh  patch-skill-descriptions.py
tagopen/: __init__.py  cli.py  config.py  llm.py  slack_format.py  slack_post.py  slack_status.py
tagopen/agent/: context.py  loop.py  meta_commands.py  model_commands.py  runtime.py  skill_catalog.py  skill_lifecycle.py  skills.py
tagopen/ambient/: heartbeat.py
tagopen/context/: engine.py
tagopen/db/: connection.py  migrations.py
tagopen/gateway/: app.py  approve.py  router.py  users.py
tagopen/llm/: __init__.py  client.py  gateway.py
tagopen/media/: __init__.py  cache.py  classify.py  content.py  prepare.py  (+3 more)
(+43 files in other folders)
