[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tagopen"
version = "0.1.0"
description = "Self-hostable channel-native AI teammate for Slack"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "slack-bolt>=1.21.0",
    "litellm>=1.45.0",
    "mem0ai>=0.1.0",
    "mcp>=1.0.0",
    "aiosqlite>=0.20.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "toml>=0.10.2",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
tagopen = "tagopen.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
